test/types/sync/vass/error-min-on-syncs.good
error-min-on-syncs.chpl:8: In function 'test':
error-min-on-syncs.chpl:10: error: min() and max() are not allowed on sync/single/atomic arguments - apply readFE/readFF/read() to those arguments first
